Fix build history horizontal scroll

--- a/client/styles/strider.less
+++ b/client/styles/strider.less
@@ -56,6 +56,11 @@ body {
   #list-of-builds {
     max-height: 672px;
 
+    .truncate {
+      max-width: 110px;
+      display: block;
+    }
+
     td.committer {
       padding: 0;
       img {
